fixing dark mode on ether and polygon

--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -131,7 +131,7 @@
     }
     background-color: #46297c;
     width: 80vw;
-    height: 100vh;
+    height: 100vh !important;
     overflow: auto;
     position: fixed;
     // top: -70px;
